<resources>
    <string name="app_name">BarberApp</string>

    <string name="login_here">Login Here</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <dimen name="textview_size">25dp</dimen>
    <string name="title_activity_admin">Admin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_barber">Barber</string>
    <string name="title_activity_client">Client</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email ID</string>
    <string name="mobile">Mobile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="accept_terms"><![CDATA[Accept Terms & Condition]]></string>
    <string name="max_age">100</string>

    <string-array name="cities">
        <item>Surat</item>
        <item>Baroda</item>
        <item>Ahmedabad</item>
        <item>Valsad</item>
    </string-array>
</resources>

